Segunda aula da maratona, nesta aula foi adicionado setas e ativou o modal

--- a/index.html
+++ b/index.html
@@ -1,71 +1,150 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dev.finance$</title>
 
-    <link rel="stylesheet" href="./style.css">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com">
-    <link href = "https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 0,100; 0,200; 0,400; 0,700; 1,100; 1,200; 1,400 & display = swap "rel =" stylesheet ">
-</head>
-<body>
-    <header>
-        <h1 id="logo">dev.finance$</h1>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>dev.finance$</title>
 
-    <main class="container">
-        <section id="balance">
-            <h2>Balanço</h2>
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link
+            href="https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 0,100; 0,200; 0,400; 0,700; 1,100; 1,200; 1,400 & display = swap "
+            rel=" stylesheet ">
+    </head>
 
-            <div class="card">
-                <h3>Entradas</h3>
-                <p>R$ 5.000,00</p>
+    <body>
+        <header>
+            <img src="./assets/logo.svg" alt="Logo Dev Finance">
+        </header>
 
+        <main class="container">
+            <section id="balance">
+                <h2 class="sr-only">Balanço</h2>
+
+                <div class="card">
+                    <h3>
+                        <span>Entradas</span>
+                        <img src="./assets/income.svg" alt="Imagem de entradas">
+                    </h3>
+                    <p>R$ 5.000,00</p>
+
+                </div>
+                <div class="card">
+                    <h3>
+                        <span>Saídas</span>
+                        <img src="./assets/expense.svg" alt="Imagem de saídas">
+                    </h3>
+                    <p>R$ 2.000,00</p>
+
+                </div>
+                <div class="card total">
+                    <h3>
+                        <span>Total</span>
+                        <img src="./assets/total.svg" alt="Imagem de total">
+                    </h3>
+                    <p>R$ 3.000,00</p>
+                </div>
+            </section>
+
+            <section id="transaction">
+                <h2 class="sr-only">Transações</h2>
+                <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+
+                <table id="data-table">
+                    <thead>
+                        <tr>
+                            <th>Descrição</th>
+                            <th>Valor</th>
+                            <th>Data</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="description">Luz</td>
+                            <td class="expense">- R$ 500,00</td>
+                            <td class="date">28/01/2021</td>
+                            <td>
+                                <img src="./assets/minus.svg" alt="Remover transação">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="description">Criação Website</td>
+                            <td class="income">R$ 5000,00</td>
+                            <td class="date">28/01/2021</td>
+                            <td>
+                                <img src="./assets/minus.svg" alt="Remover transação">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="description">Internet</td>
+                            <td class="expense">- R$ 200,00</td>
+                            <td class="date">28/01/2021</td>
+                            <td>
+                                <img src="./assets/minus.svg" alt="Remover transação">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+
+        <div class="modal-overlay">
+            <div class="modal">
+                <div id="form">
+                    <h2>Nova Transação</h2>
+                    <form action="">
+                        <div class="input-group">
+                            <label class="sr-only" for="description">Descrição</label>
+                            <input type="text" id="description" name="description" placeholder="Descrição" />
+                        </div>
+
+                        <div class="input-group">
+                            <label class="sr-only" for="amount">Valor</label>
+                            <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                            <small class="help">Use o sinal - (negativo) para despesas e , (virgula) para casas
+                                decimais</small>
+                        </div>
+
+                        <div class="input-group">
+                            <label class="sr-only" for="date">Data</label>
+                            <input type="date" id="date" name="date" />
+                        </div>
+
+                        <div class="input-group actions">
+                            <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
+                            <button>Salvar</button>
+                        </div>
+
+                    </form>
+                </div>
             </div>
-            <div class="card">
-                <h3>Saídas</h3>
-                <p>R$ 2.000,00</p>
+        </div>
 
-            </div>
-            <div class="card total">
-                <h3>Total</h3>
-                <p>R$ 3.000,00</p>
-            </div>
-        </section>
+        <footer>
+            <p>dev.finance$</p>
+        </footer>
 
-        <section id="transaction">
-            <h2>Transações</h2>
-            <table id="data-table">
-                <thead>
-                    <tr>
-                        <th>Descrição</th>
-                        <th>Valor</th>
-                        <th>Data</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">28/01/2021</td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação Website</td>
-                        <td class="income">R$ 5000,00</td>
-                        <td class="date">28/01/2021</td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">28/01/2021</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
-
-    <footer><p>dev.finance$</p></footer>
-
-</body>
+        <script>
+            const Modal = {
+                open(){
+                    //Abrir modal
+                    //Adicionar a classe active ao modal
+                    document
+                    .querySelector('.modal-overlay')
+                    .classList
+                    .add('active')
+                },
+                close() {
+                    //Fechar modal
+                    //Remover a classe active no modal
+                    document
+                    .querySelector('.modal-overlay')
+                    .classList
+                    .remove('active')
+                }
+            }
+        </script>
+    </body>
 </html>
