--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>dev.finance$</title>
 
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link
-            href="https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 0,100; 0,200; 0,400; 0,700; 1,100; 1,200; 1,400 & display = swap "
-            rel=" stylesheet ">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <header>
             <img src="./assets/logo.svg" alt="Logo Dev Finance">
@@ -24,33 +20,43 @@
 
                 <div class="card">
                     <h3>
-                        <span>Entradas</span>
-                        <img src="./assets/income.svg" alt="Imagem de entradas">
+                        <span>
+                            Entradas
+                        </span>
+                        <img src="./assets/income.svg" alt="Image de entradas">
                     </h3>
-                    <p>R$ 5.000,00</p>
-
+                    <p id="incomeDisplay">R$ 0,00</p>
                 </div>
+
                 <div class="card">
                     <h3>
-                        <span>Saídas</span>
-                        <img src="./assets/expense.svg" alt="Imagem de saídas">
+                        <span>
+                            Saídas
+                        </span>
+                        <img src="./assets/expense.svg" alt="Image de saídas">
                     </h3>
-                    <p>R$ 2.000,00</p>
-
+                    <p id="expenseDisplay">R$ 0,00</p>
                 </div>
+
                 <div class="card total">
                     <h3>
-                        <span>Total</span>
-                        <img src="./assets/total.svg" alt="Imagem de total">
+                        <span>
+                            Total
+                        </span>
+                        <img src="./assets/total.svg" alt="Image de total">
                     </h3>
-                    <p>R$ 3.000,00</p>
+                    <p id="totalDisplay">R$ 0,00</p>
                 </div>
+                
             </section>
 
             <section id="transaction">
                 <h2 class="sr-only">Transações</h2>
-                <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
+                <a href="#" 
+                onclick="Modal.open()"
+                class="button new">+ Nova Transação</a>
+                
                 <table id="data-table">
                     <thead>
                         <tr>
@@ -61,30 +67,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td class="description">Luz</td>
-                            <td class="expense">- R$ 500,00</td>
-                            <td class="date">28/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover transação">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="description">Criação Website</td>
-                            <td class="income">R$ 5000,00</td>
-                            <td class="date">28/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover transação">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="description">Internet</td>
-                            <td class="expense">- R$ 200,00</td>
-                            <td class="date">28/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover transação">
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
             </section>
@@ -94,29 +76,51 @@
             <div class="modal">
                 <div id="form">
                     <h2>Nova Transação</h2>
-                    <form action="">
+                    <form action="" onsubmit="Form.submit(event)">
                         <div class="input-group">
-                            <label class="sr-only" for="description">Descrição</label>
-                            <input type="text" id="description" name="description" placeholder="Descrição" />
+                            <label 
+                                class="sr-only" 
+                                for="description">Descrição</label>
+                            <input 
+                                type="text" 
+                                id="description" 
+                                name="description"
+                                placeholder="Descrição"
+                            />
                         </div>
 
                         <div class="input-group">
-                            <label class="sr-only" for="amount">Valor</label>
-                            <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
-                            <small class="help">Use o sinal - (negativo) para despesas e , (virgula) para casas
-                                decimais</small>
+                            <label 
+                                class="sr-only" 
+                                for="amount">Valor</label>
+                            <input 
+                                type="number"
+                                step="0.01"
+                                id="amount" 
+                                name="amount"
+                                placeholder="0,00"
+                            />
+                            <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
                         </div>
 
                         <div class="input-group">
-                            <label class="sr-only" for="date">Data</label>
-                            <input type="date" id="date" name="date" />
+                            <label 
+                                class="sr-only" 
+                                for="date">Data</label>
+                            <input 
+                                type="date" 
+                                id="date" 
+                                name="date"
+                            />
                         </div>
 
                         <div class="input-group actions">
-                            <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
+                            <a 
+                            onclick="Modal.close()"
+                            href="#" 
+                            class="button cancel">Cancelar</a>
                             <button>Salvar</button>
                         </div>
-
                     </form>
                 </div>
             </div>
@@ -124,27 +128,9 @@
 
         <footer>
             <p>dev.finance$</p>
+            <p id="developer">Desenvolvido por Diego Ferreira</p>
         </footer>
 
-        <script>
-            const Modal = {
-                open(){
-                    //Abrir modal
-                    //Adicionar a classe active ao modal
-                    document
-                    .querySelector('.modal-overlay')
-                    .classList
-                    .add('active')
-                },
-                close() {
-                    //Fechar modal
-                    //Remover a classe active no modal
-                    document
-                    .querySelector('.modal-overlay')
-                    .classList
-                    .remove('active')
-                }
-            }
-        </script>
+        <script src="./scripts.js"></script>
     </body>
 </html>
