Correção dos erros de português, alinhamento de textos e adicionado contato do linkedin

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
         
         <footer><p>dev.finance$</p>
-            <p>Desenvolvido por Diego Ferreira</p>
+            <p>Desenvolvido por <a href="https://www.linkedin.com/in/diego-ferreira-34b6348b/" target="_blank">Diego Ferreira</a></p>
         </footer>
 
         <script src="./scripts.js"></script>
